@@ -31,7 +31,7 @@
   ea49ff6a14616cefcb9fd1b4d49080875dfaf2f3 2013090900 mingw32-binutils.xml
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
-  fdd557a9e9563a44044cbf1c9d9917747d506418 2014011100 mingw32-dos2unix.xml
+  fcfc25a9507b994312829533a2ce7735ec9c1bbb 2014052000 mingw32-dos2unix.xml
   4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   3b9dfae51f73761e69811f402c6374c63aeec552 2013110100 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  1413ad59660ad963082e7de10c31bbb725116aee 2014043000 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2014052000 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
