@@ -19,6 +19,10 @@
       <source tarname="dos2unix-%-mingw32-%-src.tar.%" />
 
       <component class="bin">
+        <release tarname="dos2unix-6.0.5-1-mingw32-bin.tar.lzma" >
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="dos2unix-6.0.4-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
@@ -51,6 +55,7 @@
       </component>
 
       <component class="doc">
+        <release tarname="dos2unix-6.0.5-1-mingw32-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.4-1-mingw32-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.3-1-mingw32-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.2-1-mingw32-doc.tar.lzma" />
@@ -64,6 +69,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="dos2unix-6.0.5-1-mingw32-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.4-1-mingw32-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.3-1-mingw32-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.2-1-mingw32-lic.tar.lzma" />
