@@ -20,6 +20,11 @@
       <source tarname="dos2unix-%-msys-%-src.tar.%" />
 
       <component class="bin">
+        <release tarname="dos2unix-6.0.5-1-msys-1.0.17-bin.tar.lzma" >
+          <requires eq="msys-core-*-msys-*-bin.tar" />
+          <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
+          <requires eq="msys-libintl-*-msys-*-dll-8.tar" />
+        </release>
         <release tarname="dos2unix-6.0.4-1-msys-1.0.17-bin.tar.lzma" >
           <requires eq="msys-core-*-msys-*-bin.tar" />
           <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
@@ -58,6 +63,7 @@
       </component>
 
       <component class="doc">
+        <release tarname="dos2unix-6.0.5-1-msys-1.0.17-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.4-1-msys-1.0.17-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.3-1-msys-1.0.17-doc.tar.lzma" />
         <release tarname="dos2unix-6.0.2-1-msys-1.0.17-doc.tar.lzma" />
@@ -73,6 +79,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="dos2unix-6.0.5-1-msys-1.0.17-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.4-1-msys-1.0.17-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.3-1-msys-1.0.17-lic.tar.lzma" />
         <release tarname="dos2unix-6.0.2-1-msys-1.0.17-lic.tar.lzma" />
